# rust-analyzer-wasm

browser_js/public/: index.html
crates/project-model/: Cargo.toml
crates/text/: t.txt
patches/vfs/: Cargo.toml
patches/vfs/src/: file_set.rs  lib.rs  vfs_path.rs
ra-wasm/: Cargo.toml
ra-wasm/src/: indexed_db.rs  lib.rs  t.txt
www/: crates_dep.js  example-code.rs  index.js  package.json  ra-worker.js
