[package]
name = "wasm_demo"
version = "0.1.0"
authors = ["rust-analyzer developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1.6" }
instant = { version = "0.1", features = ["wasm-bindgen"] }
log = { version = "0.4.14", features = ["release_max_level_warn"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.91"
serde_repr = "0.1.6"
serde-wasm-bindgen = "0.1.3"
stacker = "0.1.13"
wasm-bindgen = "0.2.72"
js-sys = "0.3.60"
wasm-bindgen-rayon = {version = "1.0.2"}
wasm-bindgen-futures = "0.4.33"
web-sys = {version = "0.3.60", features= ["IdbFactory","IdbRequest","IdbOpenDbRequest","IdbObjectStore"]}
indexed_db_futures = "0.3.0"
ide = { version = "0.0.81", package = "ra_ap_ide" }
cfg = { version = "0.0.81", package = "ra_ap_cfg" }
ide_db = { version = "0.0.81", package = "ra_ap_ide_db" }
vfs = { path = "../patches/vfs" }
toml = "0.5.11"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

#[patch.'crates-io']
#base-db = { path = "../patches/base-db",version = "0.0.81",package = "ra_ap_base_db" }